# ShipKit

./: .gitignore  AGENTS.md  Cargo.toml  README.md  package.json  pnpm-lock.yaml
.cargo/: config.toml
.codex/: config.toml  execution-batch.schema.json  verify.commands
.codex/actions/: README.md  dev-desktop.sh  package-smoke.sh  run-verify.sh  setup-worktree.sh
.github/workflows/: ci.yml  perf-enforced.yml  perf-foundation.yml  quality-gates.yml  (+2 more)
.perf-baselines/: build-time.json  bundle.json
apps/desktop/src-tauri/: Cargo.toml  build.rs  tauri.conf.json
apps/desktop/src-tauri/capabilities/: default.json
apps/desktop/src-tauri/permissions/: desktop.toml
apps/desktop/src-tauri/permissions/autogenerated/: apply_migrations.toml  clear_support_bundles.toml  export_desktop_settings.toml  export_support_bundle.toml  get_all_settings.toml  get_app_overview.toml  get_css_variables.toml  get_database_overview.toml  get_desktop_settings.toml  get_log_entries.toml  get_setting.toml  get_theme.toml  import_desktop_settings.toml  list_support_bundles.toml  list_themes.toml  migration_status.toml  reset_desktop_settings.toml  restore_desktop_settings_from_bundle.toml  rollback_migration.toml  set_plugin_enabled_state.toml  set_setting.toml  set_theme.toml
apps/desktop/src-tauri/plugin_catalog/: catalog.json
apps/desktop/src-tauri/src/: api.rs  main.rs  plugins.rs  preferences.rs  state.rs
apps/desktop/src-tauri/src/commands/: database.rs  diagnostics.rs  logger.rs  mod.rs  plugins.rs  preferences.rs  settings.rs  theme.rs
release/: channels.json
(+56 files in other folders)
